--- a/fs/jbd/Makefile
+++ b/fs/jbd/Makefile
@@ -5,3 +5,5 @@
 obj-$(CONFIG_JBD) += jbd.o
 
 jbd-objs := transaction.o commit.o recovery.o checkpoint.o revoke.o journal.o
+
+EXTRA_CFLAGS += -Wno-maybe-uninitialized -Wno-unused-function
