--- a/arch/arm64/configs/potter_defconfig
+++ b/arch/arm64/configs/potter_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.138 Kernel Configuration
+# Linux/arm64 3.18.140 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -36,6 +36,7 @@ CONFIG_PGTABLE_LEVELS=3
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
+CONFIG_THREAD_INFO_IN_TASK=y
 
 #
 # General setup
@@ -306,11 +307,8 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_ASN1=y
@@ -451,7 +449,6 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_PROCESS_RECLAIM=y
 # CONFIG_FORCE_RECLAIM is not set
-CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_DEFAULT_SWAPPINESS=60
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
@@ -1292,7 +1289,6 @@ CONFIG_DROPBOX=y
 # CONFIG_HD3SS460_MUX is not set
 # CONFIG_USB3813 is not set
 # CONFIG_FSUSB42_MUX is not set
-CONFIG_DTV_FC8300=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1923,7 +1919,9 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 CONFIG_TOUCHSCREEN_NT36xxx=y
 # CONFIG_TOUCHSCREEN_ILITEK is not set
+# CONFIG_TOUCHSCREEN_ILITEK_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
+# CONFIG_TOUCHSCREEN_ILI9881H is not set
 CONFIG_SCREEN_OFF_GESTURES=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -2012,6 +2010,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
+CONFIG_LDISC_AUTOLOAD=y
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 
@@ -2073,7 +2072,6 @@ CONFIG_DIAG_OVER_TTY=y
 CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 CONFIG_HW_RANDOM_MSM_LEGACY=y
-# CONFIG_R3964 is not set
 # CONFIG_APPLICOM is not set
 
 #
@@ -2781,7 +2779,6 @@ CONFIG_MSMB_CAMERA=y
 # CONFIG_MSMB_CAMERA_DEBUG is not set
 # CONFIG_MSMB_CAMERA_2016 is not set
 CONFIG_MSM_CAMERA_SENSOR=y
-# CONFIG_MSMB_CAMERA_2017 is not set
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
 CONFIG_MSM_CSI20_HEADER=y
@@ -2813,6 +2810,7 @@ CONFIG_MSM_SEC_CCI_TA_NAME="seccamdemo64"
 # CONFIG_DEBUG_CAMERA is not set
 # CONFIG_CAMERA_CSID_DEBUG is not set
 CONFIG_QPNP_FLASH_STROBE_OVERRIDE=y
+# CONFIG_CAMERA_CLOCK_BOOTTIME is not set
 # CONFIG_MOT_CAMERA_ALT_CLOCKS is not set
 # CONFIG_MOT_CAMERA_ALT_MIPI_TERMINAL_ENABLE is not set
 # CONFIG_MULTI_CAMERA_DEEN is not set
@@ -3033,10 +3031,10 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
 # CONFIG_FB_MSM_MDSS_PANEL_STATS_OPR is not set
-# CONFIG_FB_SSD1307 is not set
-# CONFIG_MOD_DISPLAY is not set
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_KLAPSE=y
+# CONFIG_FB_SSD1307 is not set
+# CONFIG_MOD_DISPLAY is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=m
 # CONFIG_LCD_L4F00242T03 is not set
@@ -3680,6 +3678,7 @@ CONFIG_MMC_SDHCI_MSM_ICE=y
 # CONFIG_MMC_USHC is not set
 # CONFIG_MMC_USDHI6ROL0 is not set
 CONFIG_MMC_CQ_HCI=y
+# CONFIG_SDHCI_DUMPREG_DEBUG_PANIC is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -4619,8 +4618,8 @@ CONFIG_MISC_FILESYSTEMS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
 CONFIG_SDCARD_FS=y
-# CONFIG_SDCARD_FS_PARTIAL_RELATIME is not set
-# CONFIG_SDCARD_FS_DIR_WRITER is not set
+CONFIG_SDCARD_FS_PARTIAL_RELATIME="n"
+CONFIG_SDCARD_FS_DIR_WRITER="n"
 # CONFIG_MULTISPACE_FEATURE_ENABLED is not set
 # CONFIG_ESD_FS is not set
 # CONFIG_HFS_FS is not set
@@ -4646,9 +4645,15 @@ CONFIG_PSTORE_RAM=y
 CONFIG_PSTORE_RAM_ANNOTATION_APPEND=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_F2FS_FS_LEGACY=y
-CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
+CONFIG_F2FS_FS_LEGACY=y
+# CONFIG_F2FS_RESERVED_SPACE is not set
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
@@ -4780,6 +4785,7 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
+# CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_PREEMPT is not set
 
 #
@@ -5141,4 +5147,3 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-
